# m2b

./: .replit  PROJECT_INFO.md  config.py  main.py  pyproject.toml  run_demo.py
agents/: analytics_agent.py  backend_agent.py  base_agent.py  deploy_agent.py  design_agent.py  devops_agent.py  feedback_agent.py  frontend_agent.py  gap_analysis_agent.py  iterate_agent.py  knowledge_graph_agent.py  llm_agent.py  market_discovery_agent.py  marketing_agent.py  product_blueprint_agent.py  test_agent.py
api/: app.py
api/routes/: agents.py  project.py
attached_assets/: Pasted-Cursor-AI-Prompt-tailored-for-building-your-multi-agent-SaaS-Cloner-Enhancer-project-end-to-end--1745374678513.txt
data/: analyzed_products.json  default_product_blueprint.json  discovered_products.json  identified_gaps.json
docs/: AGENTS_OVERVIEW.md
models/: agent_state.py  database.py  product.py  saas_cloner_schema.py
output/: knowledge_graph.html  result_20250423025343.json  result_20250423025416.json  result_20250423030717.json  result_20250423030939.json
utils/: db_utils.py  knowledge_graph.py  openai_utils.py  web_scraper.py
workflows/: graph_rag_integration.py  saas_cloner_dag.py  saas_cloner_graph.py
