[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.24",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.2",
    "langchain-core>=0.3.55",
    "beautifulsoup4>=4.13.4",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
]
